add "clear grid" button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-<button id="set-area">Resize Grid</button>
+<nav>
+<button id="clear-grid">Clear Grid</button>
+<button id="resize-grid" class="resize">Resize Grid</button>
+</nav>
 
 
 <div id="grid-container"></div>
