change behavior to increase opacity vs fill pixels

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <button id="resize-grid" class="resize">Resize Grid</button>
 </nav>
 
-
-<div id="grid-container"></div>
+<main id="grid-container"></main>
 
 
 
